--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
       <meta name="description"
-         content="Made with love for Annu">
+         content="Made with love for Pari">
       <meta name="author" content="Raunak">
       <meta name="email" content="rraunak@asu.edu">
       <meta name="copyright" content="Raunak 2024" />
@@ -24,7 +24,7 @@
       <meta name="twitter:creator" content="@Vinit_Shahdeo">
       <meta name="twitter:image" content="https://raw.githubusercontent.com/vinitshahdeo/vinitshahdeo/master/images/sonali.jpeg">
 
-      <title>Made with love for Annu</title>
+      <title>Made with love for Pari</title>
 
       <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
       <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
@@ -53,7 +53,7 @@
       <img src="https://i.imgur.com/dGOOfnA.png" alt="image-top-right" class="top-right-decoration">
       <img src="https://i.imgur.com/t6ffnbn.png" alt="image-top-left" class="top-left-decoration"> 
       <header id="main">
-         <h1>Will You Go on a Date With Me Annu? ❤️❤️</h1>
+         <h1>Will You Go on a Date With Me Pari? ❤️❤️</h1>
        </header>
        <main>
          <canvas id="confetti-canvas"></canvas>
@@ -67,18 +67,18 @@
          </div>
        </main>
       <p class="dance-med">
-         Let's ask each other what we want for dinner, over and over until we die! For the first time, how does this venue sounds?
+         Let's ask each other what we want for dinner, over and over until we die! For the first date, how does this venue sounds?
       </p>
       <div class="actions">
-        <a href="https://www.google.com/maps/dir//International+Business+Park,+The+Westin+Mumbai+Garden+City,+International+Business+Park,+Oberoi+Garden+City,+35-A,+Aba+Karmarkar+Rd,+Yashodham,+Goregaon,+Mumbai,+Maharashtra+400063,+India/@19.1728514,72.7781043,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3be7b7a8ffdc7ea9:0x80adeef1e97cfe47!2m2!1d72.860506!2d19.1728698?entry=ttu" target="_blank">
+        <a href="https://www.google.com/maps/dir//R.+das+Portas+de+Santo+Ant%C3%A3o+22,+1150-114+Lisboa,+Portugal/@38.7154921,-9.2220882,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0xd193324827c4d1b:0x1e5f1a6e909fca8d!2m2!1d-9.1396872!2d38.715521?entry=ttu&g_ep=EgoyMDI0MTIwNC4wIKXMDSoASAFQAw%3D%3D" target="_blank">
           <div class="venue">SEE THE VENUE</div>
         </a>
-        <a href="https://www.kanganwestinmumbai.com/our-menus" target="_blank">
+        <a href="https://veganapati.eatbu.com/?lang=en" target="_blank">
           <div class="venue">GO TO MENU CARD</div>
         </a>
       </div>
       <p class="footer">
-         Can't wait to meet you! <br>
+         Can't wait to meet you, again! <br>
          Just a ping away for any modifications: +1 6025876826/+91 7259604810
       </p>
       <p class="happiness">Made with ❤️ by Raunak<br><a href="https://twitter.com/raunak_kashyap" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a></p>
