--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
       <meta name="description"
-         content="Made with love for Annu">
+         content="Made with love for Pari">
       <meta name="author" content="Raunak">
       <meta name="email" content="rraunak@asu.edu">
       <meta name="copyright" content="Raunak 2024" />
@@ -24,7 +24,7 @@
       <meta name="twitter:creator" content="@Vinit_Shahdeo">
       <meta name="twitter:image" content="https://raw.githubusercontent.com/vinitshahdeo/vinitshahdeo/master/images/sonali.jpeg">
 
-      <title>Made with love for Annu</title>
+      <title>Made with love for Pari</title>
 
       <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
       <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
@@ -53,7 +53,7 @@
       <img src="https://i.imgur.com/dGOOfnA.png" alt="image-top-right" class="top-right-decoration">
       <img src="https://i.imgur.com/t6ffnbn.png" alt="image-top-left" class="top-left-decoration"> 
       <header id="main">
-         <h1>Will You Go on a Date With Me Annu? ❤️❤️</h1>
+         <h1>Will You Go on a Date With Me Pari? ❤️❤️</h1>
        </header>
        <main>
          <canvas id="confetti-canvas"></canvas>
